Change from list.of to ImmutableList.of